Add React setup

--- a/package.json
+++ b/package.json
@@ -3,6 +3,63 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com-mydatahack:mdhnpm/cube-loading-spinner.git",
-  "author": "mydatahack <thon6thon6@hotmail.com>",
-  "license": "MIT"
+  "author": "mdh",
+  "license": "MIT",
+  "scripts": {
+    "lint-css": "stylelint 'src/**/*.{c,sc,le}ss'",
+    "fix-css": "printf '\\033[43mNote: You may need to run this again if any of your CSS property names contain uppercase letters.\\033[0m' && stylelint 'src/**/*.{c,sc,le}ss' --fix -f 'verbose'",
+    "lint-js": "eslint 'src/**/*.{ts,tsx,js,jsx}' --quiet",
+    "fix-js": "eslint 'src/**/*.{ts,tsx,js,jsx}' --fix --quiet",
+    "check-types": "tsc --noEmit",
+    "test": "jest",
+    "start": "webpack serve --open",
+    "devbuild": "webpack --mode development",
+    "build": "webpack --mode production",
+    "cssExtractBuild": "webpack --config ./webpack.css.extract.config.js"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@types/enzyme": "^3.10.8",
+    "@types/jest": "^26.0.22",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^5.2.4",
+    "css-minimizer-webpack-plugin": "^2.0.0",
+    "css-modules-typescript-loader": "^4.0.1",
+    "enzyme": "^3.11.0",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.5.1",
+    "postcss-loader": "^5.2.0",
+    "sass": "^1.32.12",
+    "sass-loader": "^11.0.1",
+    "source-map-loader": "^2.0.1",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.13.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.19.0",
+    "svg-inline-loader": "^0.8.2",
+    "terser-webpack-plugin": "^5.1.1",
+    "ts-jest": "^26.5.5",
+    "ts-loader": "^9.1.1",
+    "typescript": "^4.2.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.36.1",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
+  }
 }
