--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "jest",
     "start": "webpack serve --open",
     "devbuild": "webpack --mode development",
-    "build": "webpack --mode production",
+    "build:webpack": "webpack --mode production",
+    "clean": "rimraf dist",
     "cssExtractBuild": "webpack --config ./webpack.css.extract.config.js"
   },
   "dependencies": {
@@ -23,6 +24,11 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
@@ -31,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "commitlint": "^16.2.1",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
     "css-minimizer-webpack-plugin": "^2.0.0",
@@ -44,11 +51,19 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "husky": "^7.0.4",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.5.1",
     "postcss-loader": "^5.2.0",
+    "rollup": "^2.67.2",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-rename": "^1.0.1",
+    "rollup-plugin-rename-node-modules": "^1.3.1",
+    "rollup-plugin-visualizer": "^5.5.4",
     "sass": "^1.32.12",
     "sass-loader": "^11.0.1",
+    "semantic-release": "^19.0.2",
     "source-map-loader": "^2.0.1",
     "style-loader": "^2.0.0",
     "stylelint": "^13.13.0",
