--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 name: Deploy to GitHub Page
-on: 
+on:
   push:
     branches:
       - master
@@ -7,30 +7,17 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        persist-credentials: false
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
-    - name: Install
-      run: |
-        yarn install
-    - name: Unit-Tests
-      run: |
-        yarn test
-    - name: Build-Storybook
-      run: |
-        yarn build-storybook
-        pwd
-    - name: Deploy_To_GithubPage
-      uses: JamesIves/github-pages-deploy-action@3.7.1
-      with:
-        ACCESS_TOKEN: ${{ secrets.GIT_PAGE_DEPLOY_STYLE_GUIDE }}
-        BRANCH: master # The branch the action should deploy to.
-        FOLDER: storybook-static # The folder the action should deploy.
-        REPOSITORY_NAME: mydatahack/mydatahack.github.io
-        TARGET_FOLDER: design
-        CLEAN: true # Automatically remove deleted files from the deploy branch
+      - name: Install
+        run: |
+          yarn install
+      - name: Unit-Tests
+        run: |
+          yarn test
 
   run-release:
     needs: [build-and-deploy]
@@ -40,20 +27,20 @@ jobs:
         os: [ubuntu-latest]
         node-version: [14.x]
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        registry-url: 'https://npm.pkg.github.com'
-        scope: '@mydatahack'
-    - name: Install and build
-      run: |
-        yarn install
-        yarn build:package
-    - name: Semantic Release
-      uses: cycjimmy/semantic-release-action@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@mydatahack"
+      - name: Install and build
+        run: |
+          yarn install
+          yarn build:package
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
