--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -1,27 +1,24 @@
 name: Test and Build from feature branch
-on: 
+on:
   push:
     branches-ignore:
-      - 'master'
+      - "master"
 jobs:
   test-and-build-feature-branch:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        persist-credentials: false
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
-    - name: Install
-      run: |
-        yarn install
-    - name: Unit-Tests
-      run: |
-        yarn test
-    - name: Build-Storybook
-      run: |
-        yarn build-storybook
-        pwd
+      - name: Install
+        run: |
+          yarn install
+      - name: Unit-Tests
+        run: |
+          yarn test
+
   # run-release:
   #   needs: [test-and-build-feature-branch]
   #   runs-on: ubuntu-latest
