--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "devbuild": "webpack --mode development",
     "build:webpack": "webpack --mode production",
     "clean": "rimraf dist",
-    "cssExtractBuild": "webpack --config ./webpack.css.extract.config.js"
+    "build": "yarn clean ; rollup -c rollup.config.js",
+    "analyse:package": "yarn clean ; export ANALYZE=true || set ANALYZE=true&&rollup -c rollup.config.js",
+    "cssExtractBuild": "webpack --config ./webpack.css.extract.config.js",
+    "commit": "cz"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -37,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "commitizen": "^4.2.4",
     "commitlint": "^16.2.1",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
@@ -57,7 +61,6 @@
     "postcss-loader": "^5.2.0",
     "rollup": "^2.67.2",
     "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-rename": "^1.0.1",
     "rollup-plugin-rename-node-modules": "^1.3.1",
     "rollup-plugin-visualizer": "^5.5.4",
