ci(ci): update build and pipeline

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "cube-loading-spinner",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "repository": "git@github.com-mydatahack:mdhnpm/cube-loading-spinner.git",
   "author": "mdh",
   "license": "MIT",
@@ -61,8 +62,10 @@
     "postcss-loader": "^5.2.0",
     "rollup": "^2.67.2",
     "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-rename": "^1.0.1",
     "rollup-plugin-rename-node-modules": "^1.3.1",
+    "rollup-plugin-typescript2": "^0.31.2",
     "rollup-plugin-visualizer": "^5.5.4",
     "sass": "^1.32.12",
     "sass-loader": "^11.0.1",
@@ -76,7 +79,7 @@
     "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "^26.5.5",
     "ts-loader": "^9.1.1",
-    "typescript": "^4.2.4",
+    "typescript": "^4.4.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.36.1",
     "webpack-cli": "^4.6.0",
