--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "cube-loading-spinner",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "repository": "git@github.com-mydatahack:mdhnpm/cube-loading-spinner.git",
   "author": "mdh",
   "license": "MIT",
@@ -14,8 +15,12 @@
     "test": "jest",
     "start": "webpack serve --open",
     "devbuild": "webpack --mode development",
-    "build": "webpack --mode production",
-    "cssExtractBuild": "webpack --config ./webpack.css.extract.config.js"
+    "build:webpack": "webpack --mode production",
+    "clean": "rimraf dist",
+    "build": "yarn clean ; rollup -c rollup.config.js",
+    "analyse:package": "yarn clean ; export ANALYZE=true || set ANALYZE=true&&rollup -c rollup.config.js",
+    "cssExtractBuild": "webpack --config ./webpack.css.extract.config.js",
+    "commit": "cz"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -23,6 +28,11 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
@@ -31,6 +41,8 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "commitizen": "^4.2.4",
+    "commitlint": "^16.2.1",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
     "css-minimizer-webpack-plugin": "^2.0.0",
@@ -44,11 +56,20 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "husky": "^7.0.4",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.5.1",
     "postcss-loader": "^5.2.0",
+    "rollup": "^2.67.2",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-rename": "^1.0.1",
+    "rollup-plugin-rename-node-modules": "^1.3.1",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "rollup-plugin-visualizer": "^5.5.4",
     "sass": "^1.32.12",
     "sass-loader": "^11.0.1",
+    "semantic-release": "^19.0.2",
     "source-map-loader": "^2.0.1",
     "style-loader": "^2.0.0",
     "stylelint": "^13.13.0",
@@ -58,7 +79,7 @@
     "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "^26.5.5",
     "ts-loader": "^9.1.1",
-    "typescript": "^4.2.4",
+    "typescript": "^4.4.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.36.1",
     "webpack-cli": "^4.6.0",
