--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           yarn install
 
   run-release:
-    needs: [build-and-deploy]
+    needs: [build-and-test]
     runs-on: ubuntu-latest
     strategy:
       matrix:
