--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install and build
         run: |
           yarn install
-          yarn build:package
+          yarn build
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
         env:
