chore(package.json): add publishConfig in package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "repository": "git@github.com:mdhnpm/cube-loading-spinner.git",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "author": "mdh",
   "license": "MIT",
   "scripts": {
