--- a/.npmignore
+++ b/.npmignore
@@ -11,13 +11,13 @@ yarn.lock
 yarn-error.log
 .releaserc.js
 .stylelintrc
-.CHANGELOG.md
+CHANGELOG.md
 commitlint.config.js
 jest.config.js
-LICENSE
-README.md
 rollup.config.js
 setup.ts
 tsconfig.json
 webpack.config.js
 webpack.css.extract.config.js
+
+# Note that README.md and LICENSE will be always included even it is listed here!
