--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@mdhnpm/cube-loading-spinner",
   "version": "1.4.0",
   "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "module": "dist/index.js",
   "repository": "git@github.com:mdhnpm/cube-loading-spinner.git",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
