--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "types": ["jest", "node"],
     "outDir": "./dist/",
+    "moduleResolution": "node",
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "esnext",
@@ -13,6 +14,6 @@
     "declaration": true,
     "paths": {}
   },
-  "include": ["src-with-css-loader/**/*"],
-  "exclude": ["src-with-css-loader/**/tests/**/*", "node_modules"]
+  "include": ["src-with-css-loader/**/*", "src/**/*"],
+  "exclude": ["node_modules"]
 }
