--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "module": "dist/index.js",
   "repository": "git@github.com:mdhnpm/cube-loading-spinner.git",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://registry.npmjs.org/"
   },
   "author": "mdh",
   "license": "MIT",
