feat(init): npm publish pipeline update
* feat(init): npm publish pipeline

* feat: testing CI

* chore(release): 1.6.0-add-github-action-npm-publish.1 [skip ci]

* **init:** npm publish pipeline ([0e5cf35](https://github.com/mdhnpm/cube-loading-spinner/commit/0e5cf353c3cc2efde38d927ca68aa26c7410acfe))

Co-authored-by: semantic-release-bot <semantic-release-bot@martynus.net>

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@mdhnpm/cube-loading-spinner",
-  "version": "1.5.1",
+  "version": "1.6.0-add-github-action-npm-publish.1",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "repository": "git@github.com:mdhnpm/cube-loading-spinner.git",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://registry.npmjs.org/"
   },
   "author": "mdh",
   "license": "MIT",
