--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -36,8 +36,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          registry-url: "https://npm.pkg.github.com"
-          scope: "@mydatahack"
+          registry-url: "https://registry.npmjs.org"
+          scope: "@mdhnpm"
       - name: Install and build
         run: |
           yarn install
@@ -46,4 +46,4 @@ jobs:
         uses: cycjimmy/semantic-release-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
