--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "declaration": true,
     "paths": {}
   },
-  "include": ["src-with-css-loader/**/*", "src/**/*"],
+  "include": ["src-with-css-loader/**/*", "src/**/*", "index.ts"],
   "exclude": ["node_modules"]
 }
