--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   },
   "author": "mdh",
   "license": "MIT",
+  "description": "Configurable 3d cube loading spinner built with and for ReactJS",
+  "keywords": [
+    "react-component",
+    "ui",
+    "animation",
+    "3d",
+    "loading spinner"
+  ],
   "scripts": {
     "lint-css": "stylelint 'src/**/*.{c,sc,le}ss'",
     "fix-css": "printf '\\033[43mNote: You may need to run this again if any of your CSS property names contain uppercase letters.\\033[0m' && stylelint 'src/**/*.{c,sc,le}ss' --fix -f 'verbose'",
