--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "noImplicitAny": true,
-    "module": "esnext",
+    "module": "es6",
     "target": "es6",
     "jsx": "react",
     "skipLibCheck": true,
