--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "@webpack-cli/serve": "^3.0.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "commitizen": "^4.2.4",
     "commitlint": "^16.2.1",
@@ -96,8 +97,8 @@
     "ts-loader": "^9.1.1",
     "typescript": "^4.4.2",
     "url-loader": "^4.1.1",
-    "webpack": "^5.36.1",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.3"
   }
 }
