--- a/package.json
+++ b/package.json
@@ -97,8 +97,8 @@
     "ts-loader": "^9.1.1",
     "typescript": "^4.4.2",
     "url-loader": "^4.1.1",
-    "webpack": "4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.3"
+    "webpack": "^5.36.1",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
