--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "description": "Configurable 3d cube loading spinner built with and for ReactJS",
   "keywords": [
-    "react-component",
+    "react component",
     "ui",
     "animation",
     "3d",
@@ -33,10 +33,12 @@
     "cssExtractBuild": "webpack --config ./webpack.css.extract.config.js",
     "commit": "cz"
   },
+  "peerDependencies": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -46,11 +48,12 @@
     "@semantic-release/git": "^10.0.1",
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.22",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "@webpack-cli/serve": "^3.0.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "commitizen": "^4.2.4",
     "commitlint": "^16.2.1",
@@ -71,6 +74,8 @@
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.5.1",
     "postcss-loader": "^5.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "rollup": "^2.67.2",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
