--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node-version: [18.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -48,7 +52,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node-version: [14.x]
+        node-version: [18.x]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -56,8 +60,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          registry-url: "https://registry.npmjs.org"
-          scope: "@mdhnpm"
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@mdhnpm'
       - name: Install and build
         run: |
           yarn install
