--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
+  "type": "module",
   "author": "mdh",
   "license": "MIT",
   "description": "Configurable 3d cube loading spinner built with and for ReactJS",
@@ -45,7 +46,10 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^9.0.0",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/jest": "^26.0.22",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
@@ -53,14 +57,12 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "@webpack-cli/serve": "^3.0.1",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "commitizen": "^4.2.4",
     "commitlint": "^16.2.1",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
     "css-minimizer-webpack-plugin": "^2.0.0",
     "css-modules-typescript-loader": "^4.0.1",
-    "enzyme": "^3.11.0",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -99,5 +101,10 @@
     "webpack": "^5.36.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
