--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@webpack-cli/serve": "^3.0.1",
     "commitizen": "^4.2.4",
     "commitlint": "^16.2.1",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
     "css-minimizer-webpack-plugin": "^2.0.0",
